syntax = "proto3";

package model;

option go_package = "github.com/apibrew/apibrew/pkg/model";

import 'model/audit.proto';
import 'model/common.proto';
import 'model/security.proto';
import 'model/hcl.proto';
import 'google/protobuf/struct.proto';

message Namespace {
  string id = 1;
  string name = 2;

  string description = 4;
  google.protobuf.Struct details = 5;
  repeated SecurityConstraint securityConstraints = 6 [(model.hcl_block) = "constraint"];

  AuditData auditData = 101;
  uint32 version = 102;
}
